2006-04-21  David Hampton  <hampton@employees.org>

	* src/gnome/glade/reconcile.glade: Remove translatable flag from a
	label. Remove unused "Reconcile" dialog. This was an old abandoned
	attempt to replace the hardcoded C reconcile dialog with one from
	a glade file.

	* src/gnome/glade/account.glade: Add a tooltip for the "hidden"
	option in the Edit Account dialog.

2006-04-19  David Hampton  <hampton@employees.org>

	* src/report/report-system/gnc-report.c: If the report already has
	an id assigned (i.e. restored reports) then add it to the table
	using that id.  Only generate ids for reports that don't have them
	yet.

	* src/gnome-utils/gnc-main-window.c: Don't call shutdown directly
	from the delete_event handler, but use a periodic idle function
	that checks to insure that gnucash isn't saving the data file
	before calling shutdown.  Fixes 338952.  Also ignore repeated
	delete events if a shutdown is queued.

2006-04-19  Christian Stimming  <stimming@tuhh.de>

	* accounts/fr_CH/acctchrt_*.gnucash-xea: New French Swiss account
	templates by Jonathan Ernst.

2006-04-18  David Hampton  <hampton@employees.org>

	* src/report/report-gnome/window-report.[ch]:
	* src/gnome/top-level.c: Parse the old ~/.gnome/GnuCash MDI
	document file to see which 1.8 reports should be opened the first
	time gnucash2 starts.

2006-04-18  Christian Stimming  <stimming@tuhh.de>

	* po/fr.po: Updated French translation by Jonathan Ernst.

	* po/glossary/fr.po: Added French glossary by Jonathan Ernst
	<jonathan@ernstfamily.ch>.

2006-04-18  Derek Atkins  <derek@ihtfp.com>

	* doc/tip_of_the_day.list.in:
	  Fix a 1.8 -> 2.0 string.
	* src/report/standard-reports/register.scm:
	  Fix a string that wasn't marked for translation.

2006-04-16  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Added some text about the release.
	* configure.in: Change to version 1.9.5

2006-04-16  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-gnome/glade/choose-owner.glade: